net/ssl/ssl_client_session_cache.h
@@ -12,8 +12,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <memory>
 #include <string>
 
+#include "base/bind.h"
 #include "base/containers/mru_cache.h"
 #include "base/macros.h"
+#include "base/memory/memory_pressure_monitor.h"
 #include "base/synchronization/lock.h"
 #include "base/threading/thread_checker.h"
 #include "base/time/time.h"
@@ -75,6 +77,10 @@ class NET_EXPORT SSLClientSessionCache {
   // Removes all expired sessions from the cache.
   void FlushExpiredSessions();
 
+  // Clear cache on low memory notifications callback.
+  void OnMemoryPressure(
+      base::MemoryPressureListener::MemoryPressureLevel memory_pressure_level);
+
   std::unique_ptr<base::Clock> clock_;
   Config config_;
   CacheEntryMap cache_;
@@ -84,6 +90,8 @@ class NET_EXPORT SSLClientSessionCache {
   // a ThreadChecker. The session cache should be single-threaded like other
   // classes in net.
   base::Lock lock_;
+
+  std::unique_ptr<base::MemoryPressureListener> memory_pressure_listener_;
 
   DISALLOW_COPY_AND_ASSIGN(SSLClientSessionCache);
 };
